--repair should disable journaling SERVER-3639